NMS-14644: fix javadoc generation